--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "deploy": "./deploy.sh",
+    "sync": "./sync.sh"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
