--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
+    "next-intl": "^4.3.9",
     "prisma": "^6.16.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
